# kolab

./: .gitignore  Cargo.toml  README.md  database.json  todo.txt
front/: index.html  style.css
front/js/: bucket.js  common.js  context-menu.js  conv.js  doc.js  emojis.js  entities.js  init.js  socket.js  user.js
src/: backup.rs  executor.rs  http.rs  main.rs  serde_utils.rs
src/database/: entities.rs  mod.rs  objects.rs  update.rs
src/session/: account.rs  entities.rs  mod.rs  objects.rs  replies.rs  requests.rs  upload.rs
