[package]
name = "kolab"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
infer = { version = "0.3", default-features = false }
litemap = { version = "0.7", features = ["serde"] }
async-tungstenite = "0.28"
async-channel = "2.3"
futures-lite = "2.3"
futures-util = "0.3"
serde_json = "1.0"
async-lock = "3.4"
async-net = "2.0"
async-io = "2.3"
async-fs = "2.1.2"
rand = "0.8"
sha2 = "0.10"
